<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/loginLayout"
        android:weightSum="1"
        android:padding="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_string"
            android:id="@+id/mainTV"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerBT"
            android:id="@+id/registerBT"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:textSize="20dp"
            android:textAlignment="center"
            android:background="#20010101"
            android:padding="12dp"
            android:layout_marginTop="150dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBT"
            android:id="@+id/loginBT"
            android:layout_gravity="center_horizontal"
            android:background="#20010101"
            android:textAlignment="center"
            android:textSize="20dp"
            android:padding="12dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</RelativeLayout>
