<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.a01191470_tarea_registrousuario.registro"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTE"
            android:layout_gravity="center_horizontal"
            android:hint="@string/full_name_hint"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTE"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contraseñaTE"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmationTE"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirmation_hint"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/warningTV"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff0000" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:id="@+id/guardarBT"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="15dp"
            android:background="#ccc"
            android:textColor="#000" />
    </LinearLayout>
</RelativeLayout>
